Support protocol paths; add favicon

--- a/bizast/browser_setup.html
+++ b/bizast/browser_setup.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Configure bizast</title>
+<link rel="icon" type="image/png" href="icon-bizast-off.png" />
 <script type="text/javascript">
 function register() 
 {
