--- a/bizast/redirect_template.html
+++ b/bizast/redirect_template.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Bizast redirect: {resource}</title>
+<link rel="icon" type="image/png" href="icon-bizast-off.png" />
 <script type="text/javascript">
 window.location = '{resource}';
 </script>
