Support web+bz protocol

--- a/bizast/browser_setup.html
+++ b/bizast/browser_setup.html
@@ -6,6 +6,10 @@
 function register() 
 {
 	navigator.registerProtocolHandler(
+		'web+bz', 
+		'http://' + location.hostname + (location.port ? ':' + location.port : '') + '/%s', 
+		'bizast')
+	navigator.registerProtocolHandler(
 		'bz', 
 		'http://' + location.hostname + (location.port ? ':' + location.port : '') + '/%s', 
 		'bizast')
